--- a/app/src/main/res/layout/produto_item.xml
+++ b/app/src/main/res/layout/produto_item.xml
@@ -10,6 +10,7 @@
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
     android:layout_margin="8dp"
+
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,19 +49,32 @@
             android:id="@+id/produto_item_valor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text=" R$ 19.99"
-            android:textSize="18sp"
             android:layout_marginTop="8dp"
-            android:textColor="@android:color/holo_green_dark"
-            android:fontFamily="@font/montserrat"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/produto_item_nome"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/produto_item_nome"
-            app:layout_constraintTop_toBottomOf="@id/produto_item_nome"/>
+            app:layout_constraintTop_toBottomOf="@id/produto_item_nome"
+            app:layout_constraintVertical_bias="1.0"
+            tools:text=" R$ 19.99" />
 
-
+        <Button
+            android:id="@+id/produto_item_menu"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="showPopup"
+            tools:text=" R$ Menu" />
 
         <ImageView
             android:id="@+id/imageView"
